--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
-<head></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
+	<meta charset="utf-8">
+	<title>Anthony Guennegou | Product Owner</title>
+	<meta name="description" content="">
+	<meta name="autor" content="Anthony Guennegou">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">	
+
+	<link rel"stylesheet" href="normalize.css">
+
+</head>
 
 <body>
 
@@ -20,3 +32,5 @@ I've worked in a variety of companies, which i've learned a lot from, but now, i
 </p>
 
 </body>
+
+</html>
