--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">	
 
 	<link rel"stylesheet" href="normalize.css">
+	<link rel"stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://use.typekit.net/imv6qsn.css">
+
+
 
 </head>
 
 <body>
 
-<h1>Anthony Guennegou</h1>
+<h1>Anthony <span>Guennegou</span></h1>
 <h2>Product Owner @ PagesJaunes</h2>
 
 <h3>Who am i</h3>
