--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">	
 
-	<link rel"stylesheet" href="normalize.css">
-	<link rel"stylesheet" href="styles.css">
+	<link rel"stylesheet" href="css/normalize.css">
+	<link rel"stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="https://use.typekit.net/imv6qsn.css">
 
 
