--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">	
 
-	<link rel"stylesheet" href="css/normalize.css">
-	<link rel"stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="https://use.typekit.net/imv6qsn.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/styles.css">
+
+	<link rel="stylesheet" href="https://use.typekit.net/wbh5mjq.css">
 
 
 
@@ -19,21 +20,22 @@
 
 <body>
 
-<h1>Anthony <span>Guennegou</span></h1>
+<header>
+<h1>Anthony<span>Guennegou</span></h1>
 <h2>Product Owner @ PagesJaunes</h2>
+</header>
 
+<section>
 <h3>Who am i</h3>
-<p>
-Over 9 years in project management and as a product owner for the last 4 years, i'm passionate about developing digital products and executing complex projects from kickoff to delivery.
-</p>
 
-<p>
-Focus on the end user, i work to understand user needs, to document and quantify those needs through user testing, data analysis and to deliver features that meet these requirements. My decisions are based on user testing campaign, data and KPIs.
-</p>
+<article>
+<p>Over 9 years in project management and as a product owner for the last 4 years, i'm passionate about developing digital products and executing complex projects from kickoff to delivery.</p>
+<p>Focus on the end user, i work to understand user needs, to document and quantify those needs through user testing, data analysis and to deliver features that meet these requirements. My decisions are based on user testing campaign, data and KPIs.</p>
+<p>I've worked in a variety of companies, which i've learned a lot from, but now, i'm ready for a new challenge.</p>
+</article>
 
-<p>
-I've worked in a variety of companies, which i've learned a lot from, but now, i'm ready for a new challenge.
-</p>
+</section>
+
 
 </body>
 
