ajout de flexbox

--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
 
 <body>
 
+<div id="conteneur">
+
 <header>
-<section>
-<p>HELLO<span>.</span></p>
+<p>HELLO<span>,</span></p>
 <h1>I'm Anthony <span>Guennegou</span></br>🔥</h1>
 <h2>Product Owner based in Paris and currently working at PagesJaunes</h2>
-</section>
 </header>
 
-<main>
 <article>
 <section>
 <h3>Who am i</h3>
@@ -38,8 +37,9 @@
 </section>
 </article>
 
+</div>
 
-</main>
+<footer>Anthony Guennegou 1984-2018</footer>
 
 
 </body>
